# Agent365-Python-AI-First

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  HOW_TO_SET_A_VERSION.md  README.md  classes.md  generate_dependency_diagram.py  pyproject.toml  replace-version.ps1  setup.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml
agents/: __init__.py
agents/utils/: __init__.py  id_generator.py  task_id_generator.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/: config.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/exporters/: agent365_exporter.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/middleware/: baggage_builder.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/models/: caller_details.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/trace_processor/: util.py
libraries/microsoft-agents-a365-observability-hosting/: pyproject.toml  setup.py
libraries/microsoft-agents-a365-observability-hosting/microsoft_agents_a365/observability/hosting/scope_helpers/: populate_baggage.py  populate_invoke_agent_scope.py
libraries/microsoft-agents-a365-observability-hosting/microsoft_agents_a365/observability/hosting/utils/: __init__.py  turn_context_utils.py
libraries/microsoft-agents-a365-runtime/microsoft_agents_a365/runtime/: utility.py
libraries/microsoft-agents-a365-tooling-extensions-agentframework/microsoft_agents_a365/tooling/extensions/agentframework/services/: mcp_tool_registration_service.py
libraries/microsoft-agents-a365-tooling-extensions-openai/microsoft_agents_a365/tooling/extensions/openai/: mcp_tool_registration_service.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/: __init__.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/models/: __init__.py  agent_settings.py  tool_options.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/services/: __init__.py  agent_settings_service.py  mcp_tool_server_configuration_service.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/utils/: __init__.py  constants.py  utility.py
tests/: .env.example  README.md  RUNNING_TESTS.md  TEST_PLAN.md  usage_example.py
tests/agents/: test_task_id_generator.py
tests/observability/core/: test_agent365.py  test_agent365_exporter.py  test_baggage_builder.py  test_execute_tool_scope.py  test_inference_scope.py  test_invoke_agent_scope.py  test_record_attributes.py  test_span_processor.py  test_utils.py
tests/observability/core/exporters/: test_utils.py
tests/observability/extensions/agentframework/integration/: conftest.py  test_agentframework_trace_processor.py
tests/observability/extensions/langchain/: test_wrapper_langchain.py
tests/observability/extensions/openai/: test_wrapper_openaiagents.py
tests/observability/extensions/openai/integration/: test_openai_trace_processor.py
tests/observability/extensions/semantickernel/: test_wrapper_semantic_kernel.py
tests/observability/hosting/scope_helpers/: test_populate_baggage.py  test_populate_invoke_agent_scope.py  test_scope_helper_utils.py
tests/observability/hosting/token_cache_helpers/: test_agent_token_cache.py
tests/observability/hosting/utils/: test_turn_context_utils.py
tests/runtime/: test_environment_utils.py  test_power_platform_api_discovery.py  test_utility.py  test_version_utils.py
tests/tooling/: test_agent_settings_models.py  test_agent_settings_service.py  test_agent_settings_utility.py
tests/utils/: __init__.py  test_id_generator.py
versioning/helper/: __init__.py  setup_utils.py
(+2 files in other folders)
